{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 214,
  "lineage": "e6203b9d-9148-898f-12a0-df5454b70843",
  "resources": [
    {
      "module": "module.alb_module",
      "mode": "managed",
      "type": "aws_lb",
      "name": "wordpress_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:636887873883:loadbalancer/app/wordpress-alb/132c9b66ba897546",
            "arn_suffix": "app/wordpress-alb/132c9b66ba897546",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "wordpress-alb-1488303121.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:636887873883:loadbalancer/app/wordpress-alb/132c9b66ba897546",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wordpress-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0563bc702ba66f72c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06e20f19b8962c1a6"
              },
              {
                "subnet_id": "subnet-0a270a50ab46eee92"
              }
            ],
            "subnets": [
              "subnet-06e20f19b8962c1a6",
              "subnet-0a270a50ab46eee92"
            ],
            "vpc_id": "vpc-061959a4345213098",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.security_group_module.aws_security_group.load_balancer_sg",
            "module.subnet_module.aws_subnet.subnets",
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.alb_module",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "wordpress_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:636887873883:listener/app/wordpress-alb/132c9b66ba897546/5f7274f95e2220eb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:636887873883:targetgroup/wordpress-tg/27078974fef787a7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:636887873883:listener/app/wordpress-alb/132c9b66ba897546/5f7274f95e2220eb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:636887873883:loadbalancer/app/wordpress-alb/132c9b66ba897546",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb_module.aws_lb.wordpress_alb",
            "module.alb_module.aws_lb_target_group.wordpress_tg",
            "module.security_group_module.aws_security_group.load_balancer_sg",
            "module.subnet_module.aws_subnet.subnets",
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.alb_module",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:636887873883:targetgroup/wordpress-tg/27078974fef787a7",
            "arn_suffix": "targetgroup/wordpress-tg/27078974fef787a7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:636887873883:targetgroup/wordpress-tg/27078974fef787a7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "wordpress-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-061959a4345213098"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06a0cd9728546d178",
            "arn": "arn:aws:ec2:us-east-1:636887873883:instance/i-04c42e0b338cead6d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04c42e0b338cead6d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "wordpress_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d547cf9112631879",
            "private_dns": "ip-10-0-0-159.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.159",
            "public_dns": "ec2-54-226-217-196.compute-1.amazonaws.com",
            "public_ip": "54.226.217.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03973b8b495f9fc55",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06e20f19b8962c1a6",
            "tags": {
              "Name": "wordpress-bastion"
            },
            "tags_all": {
              "Name": "wordpress-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-008675d7040c54174",
              "sg-0331f61f4cc98f033",
              "sg-0563bc702ba66f72c"
            ]
          },
          "dependencies": [
            "module.database_module.aws_db_instance.wordpress_db",
            "module.database_module.aws_db_subnet_group.private_group",
            "module.ec2_module.aws_key_pair.wordpress_key_private",
            "module.ec2_module.data.aws_ami.wordpress_ami",
            "module.ec2_module.data.template_file.user_data_lamb",
            "module.ec2_module.data.template_file.user_data_mount_efs",
            "module.ec2_module.data.template_file.user_data_rds",
            "module.ec2_module.data.template_file.user_data_wordpress",
            "module.efs_module.aws_efs_file_system.wordpress_efs",
            "module.security_group_module.aws_security_group.database_sg",
            "module.security_group_module.aws_security_group.load_balancer_sg",
            "module.security_group_module.aws_security_group.ssh_sg",
            "module.security_group_module.aws_security_group.web_server_sg",
            "module.subnet_module.aws_subnet.subnets",
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.internet_gateway_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wordpress_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636887873883:internet-gateway/igw-024ea4b74c6e77a44",
            "id": "igw-024ea4b74c6e77a44",
            "owner_id": "636887873883",
            "tags": {
              "Name": "wordpress_igw"
            },
            "tags_all": {
              "Name": "wordpress_igw"
            },
            "vpc_id": "vpc-061959a4345213098"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway_module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "wordpress_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eip1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01ac44be8e8980673",
            "domain": "vpc",
            "id": "eipalloc-01ac44be8e8980673",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-169-33-76.compute-1.amazonaws.com",
            "public_ip": "35.169.33.76",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ip-1"
            },
            "tags_all": {
              "Name": "ip-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": "eip2",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009e56f80a85360f7",
            "domain": "vpc",
            "id": "eipalloc-009e56f80a85360f7",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-204-147-4.compute-1.amazonaws.com",
            "public_ip": "34.204.147.4",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ip-2"
            },
            "tags_all": {
              "Name": "ip-2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat_gateway_module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "wordpress-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nat1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01ac44be8e8980673",
            "association_id": "eipassoc-07153d9822521b5f0",
            "connectivity_type": "public",
            "id": "nat-07a4b9fc1f0beffd6",
            "network_interface_id": "eni-0c4b72ace2ba16c38",
            "private_ip": "10.0.0.38",
            "public_ip": "35.169.33.76",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06e20f19b8962c1a6",
            "tags": {
              "Name": "wordpress_ng-1"
            },
            "tags_all": {
              "Name": "wordpress_ng-1"
            }
          },
          "dependencies": [
            "module.nat_gateway_module.aws_eip.wordpress_eip",
            "module.subnet_module.aws_subnet.subnets",
            "module.vpc_module.aws_vpc.vpcs"
          ]
        },
        {
          "index_key": "nat2",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009e56f80a85360f7",
            "association_id": "eipassoc-05101f1ab9e2170b1",
            "connectivity_type": "public",
            "id": "nat-0e66ae6dc8aa70b34",
            "network_interface_id": "eni-051c977ec9506d95f",
            "private_ip": "10.0.1.140",
            "public_ip": "34.204.147.4",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a270a50ab46eee92",
            "tags": {
              "Name": "wordpress_ng-2"
            },
            "tags_all": {
              "Name": "wordpress_ng-2"
            }
          },
          "dependencies": [
            "module.nat_gateway_module.aws_eip.wordpress_eip",
            "module.subnet_module.aws_subnet.subnets",
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.route_module",
      "mode": "data",
      "type": "aws_route_table",
      "name": "wordpress_default_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636887873883:route-table/rtb-02ba4364665378ff6",
            "associations": [
              {
                "gateway_id": "",
                "main": true,
                "route_table_association_id": "rtbassoc-06f352185ae50f4b4",
                "route_table_id": "rtb-02ba4364665378ff6",
                "subnet_id": ""
              }
            ],
            "filter": [
              {
                "name": "association.main",
                "values": [
                  "true"
                ]
              }
            ],
            "gateway_id": null,
            "id": "rtb-02ba4364665378ff6",
            "owner_id": "636887873883",
            "route_table_id": "rtb-02ba4364665378ff6",
            "routes": [],
            "subnet_id": null,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-061959a4345213098"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.route_module",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-024ea4b74c6e77a44",
            "id": "r-rtb-02ba4364665378ff61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02ba4364665378ff6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet_gateway_module.aws_internet_gateway.wordpress_igw",
            "module.route_module.data.aws_route_table.wordpress_default_route_table",
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.route_module",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_route-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0359589134aafd0a51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07a4b9fc1f0beffd6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0359589134aafd0a5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway_module.aws_eip.wordpress_eip",
            "module.nat_gateway_module.aws_nat_gateway.wordpress-nat",
            "module.route_module.aws_route_table.wordpress_private_rt",
            "module.subnet_module.aws_subnet.subnets",
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.route_module",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_route-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01c6d8a1c8e68751f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e66ae6dc8aa70b34",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01c6d8a1c8e68751f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway_module.aws_eip.wordpress_eip",
            "module.nat_gateway_module.aws_nat_gateway.wordpress-nat",
            "module.route_module.aws_route_table.wordpress_private_rt",
            "module.subnet_module.aws_subnet.subnets",
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.route_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wordpress_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_table_1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636887873883:route-table/rtb-0359589134aafd0a5",
            "id": "rtb-0359589134aafd0a5",
            "owner_id": "636887873883",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "wordpress_private_rt-1"
            },
            "tags_all": {
              "Name": "wordpress_private_rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-061959a4345213098"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_vpc.vpcs"
          ]
        },
        {
          "index_key": "private_table_2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636887873883:route-table/rtb-01c6d8a1c8e68751f",
            "id": "rtb-01c6d8a1c8e68751f",
            "owner_id": "636887873883",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "wordpress_private_rt-1"
            },
            "tags_all": {
              "Name": "wordpress_private_rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-061959a4345213098"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.route_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wordpress_private_association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0930a49b36efa5468",
            "route_table_id": "rtb-0359589134aafd0a5",
            "subnet_id": "subnet-091d50483ecdce015"
          },
          "dependencies": [
            "module.route_module.aws_route_table.wordpress_private_rt",
            "module.subnet_module.aws_subnet.subnets",
            "module.vpc_module.aws_vpc.vpcs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fa375325e446ba7",
            "route_table_id": "rtb-0359589134aafd0a5",
            "subnet_id": "subnet-09d8bc1212617d23f"
          },
          "dependencies": [
            "module.route_module.aws_route_table.wordpress_private_rt",
            "module.subnet_module.aws_subnet.subnets",
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.route_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wordpress_private_association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08499c662fb5e7712",
            "route_table_id": "rtb-01c6d8a1c8e68751f",
            "subnet_id": "subnet-0dcf44e016043298a"
          },
          "dependencies": [
            "module.route_module.aws_route_table.wordpress_private_rt",
            "module.subnet_module.aws_subnet.subnets",
            "module.vpc_module.aws_vpc.vpcs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf46dbfb1da6387d",
            "route_table_id": "rtb-01c6d8a1c8e68751f",
            "subnet_id": "subnet-00dcf97e99e49d585"
          },
          "dependencies": [
            "module.route_module.aws_route_table.wordpress_private_rt",
            "module.subnet_module.aws_subnet.subnets",
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.route_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wordpress_public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04319e221a4cb4239",
            "route_table_id": "rtb-02ba4364665378ff6",
            "subnet_id": "subnet-06e20f19b8962c1a6"
          },
          "dependencies": [
            "module.route_module.data.aws_route_table.wordpress_default_route_table",
            "module.subnet_module.aws_subnet.subnets",
            "module.vpc_module.aws_vpc.vpcs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef8d5d283cf47c39",
            "route_table_id": "rtb-02ba4364665378ff6",
            "subnet_id": "subnet-0a270a50ab46eee92"
          },
          "dependencies": [
            "module.route_module.data.aws_route_table.wordpress_default_route_table",
            "module.subnet_module.aws_subnet.subnets",
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636887873883:security-group/sg-0cc37e95d42f29535",
            "description": "database security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc37e95d42f29535",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-008675d7040c54174"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-008675d7040c54174"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "db_sg",
            "name_prefix": "",
            "owner_id": "636887873883",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-061959a4345213098"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group_module.aws_security_group.load_balancer_sg",
            "module.security_group_module.aws_security_group.web_server_sg",
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636887873883:security-group/sg-0b5e3cff07d6860b7",
            "description": "elastic file system security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b5e3cff07d6860b7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-008675d7040c54174"
                ],
                "self": true,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-008675d7040c54174"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "efs_sg",
            "name_prefix": "",
            "owner_id": "636887873883",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-061959a4345213098"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group_module.aws_security_group.load_balancer_sg",
            "module.security_group_module.aws_security_group.web_server_sg",
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636887873883:security-group/sg-0563bc702ba66f72c",
            "description": "public facing load balancer security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0563bc702ba66f72c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "lb_sg",
            "name_prefix": "",
            "owner_id": "636887873883",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-061959a4345213098"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636887873883:security-group/sg-0331f61f4cc98f033",
            "description": "SSH security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0331f61f4cc98f033",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ssh_sg",
            "name_prefix": "",
            "owner_id": "636887873883",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-061959a4345213098"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636887873883:security-group/sg-008675d7040c54174",
            "description": "web server security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-008675d7040c54174",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0563bc702ba66f72c"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0563bc702ba66f72c"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-0563bc702ba66f72c"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "web_sg",
            "name_prefix": "",
            "owner_id": "636887873883",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-061959a4345213098"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group_module.aws_security_group.load_balancer_sg",
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "wordpress_subnet_private-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636887873883:subnet/subnet-091d50483ecdce015",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091d50483ecdce015",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "636887873883",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress_subnet_private-1"
            },
            "tags_all": {
              "Name": "wordpress_subnet_private-1"
            },
            "vpc_id": "vpc-061959a4345213098"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.vpcs"
          ]
        },
        {
          "index_key": "wordpress_subnet_private-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636887873883:subnet/subnet-0dcf44e016043298a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dcf44e016043298a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "636887873883",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress_subnet_private-2"
            },
            "tags_all": {
              "Name": "wordpress_subnet_private-2"
            },
            "vpc_id": "vpc-061959a4345213098"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.vpcs"
          ]
        },
        {
          "index_key": "wordpress_subnet_private-3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636887873883:subnet/subnet-09d8bc1212617d23f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d8bc1212617d23f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "636887873883",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress_subnet_private-3"
            },
            "tags_all": {
              "Name": "wordpress_subnet_private-3"
            },
            "vpc_id": "vpc-061959a4345213098"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.vpcs"
          ]
        },
        {
          "index_key": "wordpress_subnet_private-4",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636887873883:subnet/subnet-00dcf97e99e49d585",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00dcf97e99e49d585",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "636887873883",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress_subnet_private-4"
            },
            "tags_all": {
              "Name": "wordpress_subnet_private-4"
            },
            "vpc_id": "vpc-061959a4345213098"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.vpcs"
          ]
        },
        {
          "index_key": "wordpress_subnet_public-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636887873883:subnet/subnet-06e20f19b8962c1a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e20f19b8962c1a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "636887873883",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress_subnet_public-1"
            },
            "tags_all": {
              "Name": "wordpress_subnet_public-1"
            },
            "vpc_id": "vpc-061959a4345213098"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.vpcs"
          ]
        },
        {
          "index_key": "wordpress_subnet_public-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636887873883:subnet/subnet-0a270a50ab46eee92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a270a50ab46eee92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "636887873883",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress_subnet_public-2"
            },
            "tags_all": {
              "Name": "wordpress_subnet_public-2"
            },
            "vpc_id": "vpc-061959a4345213098"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpcs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "wordpress_vpc",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636887873883:vpc/vpc-061959a4345213098",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-069d586ca9d1138ef",
            "default_route_table_id": "rtb-02ba4364665378ff6",
            "default_security_group_id": "sg-0743e3668cac6a3d3",
            "dhcp_options_id": "dopt-007607a187efa3cd1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-061959a4345213098",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02ba4364665378ff6",
            "owner_id": "636887873883",
            "tags": {
              "Name": "/stag.tfvars"
            },
            "tags_all": {
              "Name": "/stag.tfvars"
            }
          }
        }
      ]
    }
  ]
}